--- a/src/components/CryptoList/CryptoList.scss
+++ b/src/components/CryptoList/CryptoList.scss
@@ -1,89 +1,181 @@
 @use "/src/styles/partials.scss" as *;
 @use "/src/styles/colors.scss" as *;
 
-.component-container{
-    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
+.component-container {
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
 }
-.warehouseform{
-    display:flex;
-    flex-direction: column;
-    row-gap: 1rem;
-    padding: $mobile-indent;
-    @include tablet{
-        flex-direction: row;
-        align-items: baseline;
-        padding: 2rem $tablet-indent 1rem $tablet-indent;
+.warehouseform {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  padding: $mobile-indent;
+  @include tablet {
+    flex-direction: row;
+    align-items: baseline;
+    padding: 2rem $tablet-indent 1rem $tablet-indent;
+  }
+  &__addnew {
+    background-color: $button-background;
+    color: $text-button;
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    padding: 0.375rem;
+    &:hover {
+      background-color: $button-hover;
     }
-    &__addnew{
-        background-color: $button-background;
-        color: $text-button;
-        outline:none;
-        border:none;
+  }
+  &__search {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 0.5rem;
+    border: 1px solid $outline;
+    border-radius: 40px;
+    padding: 0.75rem;
+    @include tablet {
+      margin-left: auto;
+      margin-right: 2rem;
+    }
+  }
+  &__input {
+    background-color: rgba(#ffffff, 0);
+    border: none;
+    padding-left: 1rem;
+  }
+  &__icon {
+    padding: none;
+  }
+}
+.warehouselist {
+  list-style-type: none;
+  padding: 0;
+  &__labels {
+    display: none;
+    @include tablet {
+      list-style-type: none;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 $tablet-indent;
+      background-color: $table-header-background;
+      color: $text-table-header;
+    }
+    .list-label {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 1rem 0;
+      width: 25%;
+      &--end {
+        width: 20%;
+        text-align: right;
+      }
+    }
+  }
+}
+.icon {
+  width: 24px;
+}
+.sort-up {
+  background-color: $table-header-background;
+  border: none;
+  outline: none;
+  width: 24px;
+  height: 24px;
+  background-image: url("../../assets/icons/sort-24px.svg");
+}
+
+.savebtn {
+  background: #2e66e5;
+  color: white;
+  border-style: none;
+  padding: 8px 51px 8px 51px;
+  border-radius: 20px;
+  border: 1px solid grey;
+  margin-right: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  cursor: pointer;
+  @include tablet {
+    padding: 8px 16px 8px 16px;
+  }
+}
+
+.container {
+  &__heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    @include tablet {
+      display: inline-flex;
+      padding-left: 2rem;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+    }
+  }
+
+  &__form {
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+    @include tablet {
+      display: flex;
+      flex: 1;
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+
+    &__warehouse {
+      @include tablet {
+        width: 50%;
+      }
+      &--title {
+        padding-bottom: 1.5rem;
+      }
+      &--input {
+        width: 100%;
+        height: 36px;
         border-radius: 20px;
-        padding:.375rem;
-        &:hover{
-            background-color: $button-hover;
-        }
-    }&__search{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        padding-left: 0.5rem;
-        border: 1px solid $outline;
-        border-radius: 40px;
-        padding:0.75rem;
-        @include tablet{
-            margin-left: auto;
-            margin-right: 2rem;
-        }
-    }
-    &__input {
-        background-color: rgba(#FFFFFF,0);
-        border: none;
+        background: linear-gradient(0deg, #ffffff, #ffffff);
+        border: 1px solid #bdc5d5;
+        margin-bottom: 1rem;
         padding-left: 1rem;
-        
-    }
-    &__icon{
-        padding:none;
-    }
-}
-.warehouselist{
-    list-style-type: none;
-    padding:0;
-    &__labels{
-        display:none;
-        @include tablet{
-            list-style-type: none;
-            display:flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 $tablet-indent;
-            background-color: $table-header-background;
-            color: $text-table-header;
+
+        &--invalid {
+          border: 1px solid red;
         }
-        .list-label{
-            display:flex;
-            flex-direction: row;
-            align-items: center;
-            padding: 1rem 0;
-            width:25%;
-            &--end{
-                width:20%;
-                text-align:right;
-            }
+      }
+      &--hr {
+        border: 1px solid $divider;
+        margin-left: -1rem;
+        margin-right: -1rem;
+
+        @include tablet {
+          display: none;
         }
+      }
     }
-}
-.icon{
-    width:24px;
-}
-.sort-up{
-    background-color: $table-header-background;
-    border:none;
-    outline:none;
-    width:24px;
-    height:24px;
-    background-image: url("../../assets/icons/sort-24px.svg");
+  }
+
+  &__hr {
+    border: 1px solid $divider;
+  }
+  &__btndiv {
+    height: 100%;
+    margin-top: 1rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f7f8f9;
+    @include tablet {
+      justify-content: flex-end;
+    }
+  }
 }
