--- a/src/components/CryptoListElement/CryptoListElement.scss
+++ b/src/components/CryptoListElement/CryptoListElement.scss
@@ -1,7 +1,7 @@
 @use "/src/styles/partials.scss" as *;
 @use "/src/styles/colors.scss" as *;
 
-.warehouselist {
+.cryptolist {
   &__element {
     border-top: 1px solid $divider;
     border-bottom: 1px solid $divider;
