--- a/src/components/CryptoList/CryptoList.scss
+++ b/src/components/CryptoList/CryptoList.scss
@@ -21,7 +21,7 @@
     outline: none;
     border: none;
     border-radius: 20px;
-    padding: 0.375rem;
+    padding: 0 4rem;
     &:hover {
       background-color: $button-hover;
     }
@@ -46,6 +46,16 @@
   }
   &__icon {
     padding: none;
+    position: relative;
+    top: 8px;
+    padding-right: 5px;
+
+    &__search {
+      padding: none;
+
+      top: 8px;
+      padding-right: 5px;
+    }
   }
 }
 .cryptolist {
@@ -56,12 +66,18 @@
     @include tablet {
       list-style-type: none;
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 $tablet-indent;
+      //   flex-direction: row;
+      //   justify-content: space-between;
+      //   align-items: center;
+      //   padding: 0 $tablet-indent;
       background-color: $table-header-background;
       color: $text-table-header;
+
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2.25rem;
     }
     .list-label {
       display: flex;
@@ -79,17 +95,25 @@
 .icon {
   width: 24px;
 }
-.sort-up {
-  background-color: $table-header-background;
-  border: none;
-  outline: none;
-  width: 24px;
-  height: 24px;
-  background-image: url("../../assets/icons/sort-24px.svg");
-}
 
 .savebtn {
   background: #2e66e5;
+  color: white;
+  border-style: none;
+  padding: 8px 51px 8px 51px;
+  border-radius: 20px;
+  border: 1px solid grey;
+  margin-right: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  cursor: pointer;
+  @include tablet {
+    padding: 8px 16px 8px 16px;
+  }
+}
+
+.deletebtn {
+  background-color: #c94515;
   color: white;
   border-style: none;
   padding: 8px 51px 8px 51px;
@@ -290,4 +314,13 @@
 .button-style {
   display: flex;
   justify-content: end;
+}
+
+.icon-edit {
+  background-color: rgba(#ffffff, 0);
+  border: none;
+  outline: none;
+  width: 24px;
+  height: 24px;
+  background-image: url("../../assets/icons/arrow_back-24px.svg");
 }
